3ano/2semestre/C/P/Estudo_Exame/ex04/PrefixCalculator.g4
grammar PrefixCalculator;

main: stat* EOF;

stat: expr? NEWLINE;

expr:
    op=('*' | '/' | '+' | '-') expr expr    #ExprPrefix
  | NUMBER                                  #ExprNumber
  ;

NUMBER: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
